--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <h1>Mysteries of the ancient reloaded</h1>
+    <div id="root"></div>
     <script type="text/javascript" src="motar.js"></script>
   </body>
 </html>
